; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetLength.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_GetLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_player_input = type { i32 }

@VLC_TICK_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_player_GetLength(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.vlc_player_input*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call %struct.vlc_player_input* @vlc_player_get_input_locked(i32* %4)
  store %struct.vlc_player_input* %5, %struct.vlc_player_input** %3, align 8
  %6 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %7 = icmp ne %struct.vlc_player_input* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.vlc_player_input*, %struct.vlc_player_input** %3, align 8
  %10 = getelementptr inbounds %struct.vlc_player_input, %struct.vlc_player_input* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @VLC_TICK_INVALID, align 4
  br label %14

14:                                               ; preds = %12, %8
  %15 = phi i32 [ %11, %8 ], [ %13, %12 ]
  ret i32 %15
}

declare dso_local %struct.vlc_player_input* @vlc_player_get_input_locked(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
